force-app/main/default/objects/Brackets_UserTournament__c/Brackets_UserTournament__c.object-meta.xml
<CustomObject>
    <label>Pool Members</label>
    <nameField>
        <displayFormat>UT-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pool Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>