force-app/main/default/objects/Brackets_UserTournament__c/fields/Brackets_Group__c.field-meta.xml
<CustomField>
    <fullName>Brackets_Group__c</fullName>
    <label>Pool</label>
    <referenceTo>Brackets_Group__c</referenceTo>
    <relationshipName>UserTornaments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>