force-app/main/default/objects/Brackets_UserTournament__c/fields/Brackets_Tournament__c.field-meta.xml
<CustomField>
    <fullName>Brackets_Tournament__c</fullName>
    <label>Tournament</label>
    <referenceTo>Brackets_Tournament__c</referenceTo>
    <relationshipName>UserTornaments</relationshipName>
    <type>Lookup</type>
</CustomField>