force-app/main/default/objects/Brackets_UserTournament__c/fields/Championship_Point_Prediction__c.field-meta.xml
<CustomField>
    <fullName>Championship_Point_Prediction__c</fullName>
    <inlineHelpText
    >Used for breaking any ties.  Enter the total number of points scored by both teams in the championship game.</inlineHelpText>
    <label>Championship Point Prediction</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>