force-app/main/default/objects/Brackets_UserTournament__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <summarizedField>Brackets_UserMatchPred__c.Points__c</summarizedField>
    <summaryForeignKey
    >Brackets_UserMatchPred__c.Brackets_UserTournament__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>