force-app/main/default/objects/Brackets_UserTournament__c/fields/Tiebreaker_Points__c.field-meta.xml
<CustomField>
    <fullName>Tiebreaker_Points__c</fullName>
    <formula
    >if (now() &gt;  Brackets_Group__r.Brackets_Tournament__r.End__c ,text(Championship_Point_Prediction__c) , &apos;xxx&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiebreaker Points</label>
    <type>Text</type>
</CustomField>