force-app/main/default/objects/Brackets_UserTournament__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>IF( 
$User.Id ==  User__r.Id ,
HYPERLINK(&apos;/apex/BracketsPredictions?show=&apos; +  Brackets_Group__c  , &apos;Manage Predictions&apos;),  
HYPERLINK(&apos;/apex/BracketsPredictions?view=&apos; +  Id , &apos;Show Predictions&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>