force-app/main/default/objects/Brackets_UserTournament__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>User__c</columns>
    <columns>Brackets_Tournament__c</columns>
    <columns>Brackets_Group__c</columns>
    <columns>Points__c</columns>
    <columns>View__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>